[Asmita]Add: implemented rabbit mq for verifying user
